--- a/boctstyle/index.css
+++ b/boctstyle/index.css
@@ -62,6 +62,7 @@ body, html{
   font-size: 40px;
   user-select: none;
   -ms-user-select: none;
+  will-change: opacity, letter-spacing;
 }
 @keyframes focus-in-expand {
   0% {letter-spacing: -0.5em;
@@ -98,6 +99,7 @@ body, html{
 
 /*chatter -----------------------------------------------------------*/
 .arrow_box {
+  display: none;
 	position: relative;
   margin: 0 auto 58px;
   border-radius: 36px 0 36px 36px;
@@ -106,19 +108,15 @@ body, html{
   padding: 5px;
   background-color: hsl(0,0%,90%);
   transition: all 0.2s linear;
-  display: none;
   animation: scale-in-top 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+  will-change: transform;
 }
 @keyframes scale-in-top {
-  0% {-webkit-transform: scale(0);
-            transform: scale(0);
-      -webkit-transform-origin: 50% -8%;
-            transform-origin: 50% -8%;
+  0% {transform: scale(0);
+      transform-origin: 50% -8%;
   }
-  100% {-webkit-transform: scale(1);
-            transform: scale(1);
-       -webkit-transform-origin: 50% -8%;
-            transform-origin: 50% -8%;
+  100% {transform: scale(1);
+        transform-origin: 50% -8%;
   }
 }
 
