--- a/boctstyle/boct.css
+++ b/boctstyle/boct.css
@@ -18,7 +18,6 @@ body{
   top: 0;
   left: 0;
   background-color: black;
-  padding: 10px;
   display: flex;
 }
 .loader{
@@ -57,7 +56,7 @@ body{
 .alll{
   display: grid;
   grid-template-columns: 50px 300px 60px auto 50px;
-  grid-template-rows: 5vh 30vh 5vh 53vh 7vh;
+  grid-template-rows: 5vh 30vh 5vh 50vh 10vh;
   grid-template-areas: 
     ". . . . ." 
     ". p . a ." 
@@ -70,9 +69,6 @@ body{
 }
 
 .pagehead { grid-area: p; }
-
-.info { grid-area: i; }
-
 
 /*--------------------------------------------*/
 .heading{
@@ -384,7 +380,6 @@ footer > div > a:hover, footer > div > a:focus{
   }
 }
 
-
 /*
 *-----------------------------------------------------------
 * Animations: scale-in-top and focus-in-expand.
@@ -393,22 +388,33 @@ footer > div > a:hover, footer > div > a:focus{
 And also: Thanks to
 ->  https://redstapler.co/add-loading-animation-to-website/
 */
+.info { grid-area: i; }
+
+.info fieldset{
+  border: 2px solid white;
+}
 .info legend{
   color: white;
-  font-family: 'Megrim';
+  text-align: center;
+  font-family: sans-serif;
+  font-size: 14px;
+  padding: 3px;
 }
 .info ul{
   list-style-type: none;
   padding: 0;
-  margin: 0;
+  margin: 5px 0 10px;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-around;
 }
 .info li{
-  width: 25px;
-  height: 25px;
+  width: 27px;
+  height: 27px;
 }
 .info svg{
+  fill: hsla(0,0%,100%,0.5);
+}
+.info svg:hover{
   fill: white;
 }
 .info p{
@@ -416,4 +422,8 @@ And also: Thanks to
   color: white;
   font-family: 'Quicksand';
   font-size: 14px;
+}
+
+.release{
+  font-family: monospace !important;
 }
