--- a/boctstyle/boct.css
+++ b/boctstyle/boct.css
@@ -46,8 +46,8 @@ body, html{
 .loader{
   margin: auto;
   padding: 0;
-  width: 140px;
-  height: 16px;
+  width: 120px;
+  height: 18px;
   background-color: var(--blk-in-dark);
   border: 2px solid var(--wit-in-dark);
   box-shadow: 0 0 100px var(--wit-in-dark);
@@ -64,7 +64,7 @@ body, html{
   font-family: 'Megrim';
   text-align: center;
 }
-@keyframes load{0% {width: 0%;} 35%  {width: 30%;} 65%  {width: 70%;} 100% {width: 100%;}
+@keyframes load{0% {width: 0%;} 35%  {width: 30%;} 65%  {width: 70%;} 100% {width: 101%;}
 }
 
 /*-------------------------------------------------------------*/
@@ -289,14 +289,17 @@ button{
 }
 .info fieldset{
   border: 2px solid var(--wit-in-dark);
+  box-shadow: 0 0 15px inset var(--wit-in-dark);
   padding: 5px;
 }
 .info legend{
   color: var(--wit-in-dark);
-  text-align: center;
   font-family: sans-serif;
   font-size: 14px;
-  padding: 3px;
+  padding: 1px 6px;
+  margin: 0 auto;
+  border: 2px solid var(--wit-in-dark);
+  background-color: var(--blk-in-dark);
 }
 .infobtns{
   display: flex;
@@ -336,3 +339,23 @@ button{
 And also: Thanks to
 ->  https://redstapler.co/add-loading-animation-to-website/
 */
+
+#info_popup{
+  display: none;
+  margin: auto;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  padding: 50px;
+  border: 2px solid var(--wit-in-dark);
+  opacity: 0.7;
+}
+.inffo{
+  width: 40%;
+  height: 40%;
+  margin: auto;
+  background-color: var(--wit-in-dark);
+  opacity: 1;
+}
