--- a/boctstyle/boct.css
+++ b/boctstyle/boct.css
@@ -288,7 +288,7 @@ button{
 }
 .info fieldset{
   border: 2px solid var(--wit-in-dark);
-  box-shadow: 0 0 15px inset var(--wit-in-dark);
+  box-shadow: 0 0 15px inset black;
   padding: 5px;
 }
 .info legend{
@@ -297,7 +297,7 @@ button{
   font-size: 14px;
   padding: 1px 6px;
   margin: 0 auto;
-  border: 2px solid var(--wit-in-dark);
+  border: 2px solid black;
   background-color: var(--blk-in-dark);
 }
 .infobtns{
@@ -323,6 +323,7 @@ button{
   color: var(--wit-in-dark);
   font-family: 'Quicksand';
   font-size: 14px;
+  margin: 10px 0;
 }
 .release{
   font-family: 'Arial', monospace !important;
@@ -342,19 +343,39 @@ And also: Thanks to
 #info_popup{
   display: none;
   margin: auto;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  padding: 50px;
+  padding: 20px;
   border: 2px solid var(--wit-in-dark);
-  opacity: 0.7;
+  background-color: rgba(0,0,0,0.4);
 }
-.inffo{
-  width: 40%;
-  height: 40%;
+.info_contain{
+  width: 70%;
+  height: 240px;
   margin: auto;
+  padding: 10px;
   background-color: var(--wit-in-dark);
-  opacity: 1;
+  border-radius: 25px;
+  text-align: center;
+}
+.info_content{
+  border: 2px solid var(--blk-in-dark);
+  border-radius: 20px;
+  width: 100%;
+  height: 200px;
+  display: flex;
+  justify-content: space-evenly;
+}
+.info_content a{
+  text-decoration: none;
+  font-size: 18px;
+  color: var(--blk-in-dark);
+}
+.info_close{
+  color: var(--wit-in-dark);
+  font-size: 24px;
+  background-color: var(--blk-in-dark);
 }
