--- a/boctstyle/boct.css
+++ b/boctstyle/boct.css
@@ -223,7 +223,7 @@ button{
   background: var(--wit-in-dark);
   padding: 2px 8px;
   position: relative;
-  box-shadow: 0 0 20px var(--wit-in-dark);
+  box-shadow: 0 0 10px var(--wit-in-dark);
 }
 
 .human_talk > p , .boct_talk > p{
@@ -277,9 +277,11 @@ button{
   width: 100%;
   height: 100%;
   text-align: center;
+  transition: all 0.05s linear;
 }
 .typespace-enter svg:active{
   fill: #ff1439;
+  transform: scale(0.85);
 }
 
 /*Info---------------------------------------------------------------*/
