--- a/boctstyle/boctmediaq.css
+++ b/boctstyle/boctmediaq.css
@@ -77,6 +77,9 @@
     border: none;
     background-color: transparent;
   }
+  .infobtns{
+    padding-bottom: 10px;
+  }
   .info p, .info hr, .info legend{
     display: none;
   }
